<resources>
    <string name="app_name">Fitness App</string>
    <string name="quick_access">Quick Access</string>
    <string name="your_workouts_header">Your Workouts</string>
    <string name="rest">Rest</string>
    <string name="skip">Skip</string>
    <string name="remaining_time">Remaining Time</string>
    <string name="time">Time</string>
    <string name="timer">Timer</string>
    <string name="done">Done!</string>
    <string name="start_3min_timer">3 min Timer</string>
    <string name="workout">Workout</string>
    <string name="log_button">Log</string>
    <string name="weight">Weight</string>
    <string name="weight_unit">kg</string>
    <string name="reps">Reps</string>
    <string name="prev_results">Previous Results</string>
    <string name="popup">Please enter a valid rep number and weight.</string>
    <string name="popup_unweighted">Please enter a valid rep number.</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="exercise_type">Exercise Type</string>
    <string name="weighted">weighted</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="initWorkouts">Initialize Workouts</string>
    <string name="add_workout">Add Workout</string>
    <string name="workout_name">Workout Name</string>
    <string name="workout_invalid">Workout Invalid</string>
    <string name="confirm_restore">This will overwrite all existing data. Do you want to proceed?</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="edit">Edit</string>
    <string name="restore">Restore</string>
    <string name="enter_workout_text">Enter Workout Text</string>
    <string name="exercise_does_not_exists">The exercise %1$s does not exist. Would you like to add it?</string>
    <string name="exercise_exists">The exercise %1$s already exists. Would you like to overwrite it?</string>
    <string name="exercise_overwrite">Would you like to overwrite the exercise %1$s?</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="workout_name_already_exists">A workout with the name %1$s already exists. Would you like to edit it instead?</string>
    <string name="yes">Yes</string>
    <string name="no_edit">No, overwrite instead</string>
    <string name="overwrite">Overwrite</string>
    <string name="workout_in_progress_exists">You still have a workout with the name %1$s in progress. Would you like to continue with it?</string>
    <string name="continue_word">Continue</string>
    <string name="past_weight">Past Weight</string>
    <string name="choose_workout_to_edit">Choose workout to edit</string>
    <string name="duration">Duration</string>
    <string name="start">Start</string>
    <string name="opens_an_activity_for_managing_editing_workouts">opens an activity for managing/editing workouts</string>
    <string name="goes_back">goes back by finishing the activity</string>
    <string name="choose_exercise_to_edit">Choose exercise to edit</string>
    <string name="manage_exercises">Manage Exercises</string>
    <string name="exercise_scroll_view_description">Scrollable surface with buttons for workouts to start</string>
    <string name="delete">delete</string>
    <string name="title_activity_weight">WeightActivity</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="up_next">Up next</string>
    <string name="up_next_template">Up next: %1$s</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_main">MainActivity2</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>